# advent_of_code_2020

./: Cargo.toml
benches/: d16_bench.rs
src/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.pest  d16.rs  d16_lib.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  lib.rs  play_with_nom_errors.rs  playground.rs  playground2.rs  playground3.rs  playground4.rs  playground5.rs
src/helpers/: grid.rs  mod.rs  nom.rs
