[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["alcroito <placinta@gmail.com>"]
edition = "2018"

[lib]
name = "advent"
path = "src/lib.rs"

[[bin]]
name = "d1"
path = "src/d1.rs"

[[bin]]
name = "d2"
path = "src/d2.rs"

[[bin]]
name = "d3"
path = "src/d3.rs"

[[bin]]
name = "d4"
path = "src/d4.rs"

[[bin]]
name = "d5"
path = "src/d5.rs"

[[bin]]
name = "d6"
path = "src/d6.rs"

[[bin]]
name = "d7"
path = "src/d7.rs"

[[bin]]
name = "d8"
path = "src/d8.rs"

[[bin]]
name = "d9"
path = "src/d9.rs"


[[bin]]
name = "play"
path = "src/play_with_nom_errors.rs"

[[bin]]
name = "playground"
path = "src/playground.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.2.1"
itertools = "0.9"
nom = "6"
boolinator = "2.4.0"
thiserror = "1.0"
anyhow = "1.0"
petgraph = "0.5"
bytecount = "0.6.2"
circular-queue = "0.2.6"