[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["alcroito <placinta@gmail.com>"]
edition = "2018"

[lib]
name = "advent"
path = "src/lib.rs"

[[bin]]
name = "d1"
path = "src/d1.rs"

[[bin]]
name = "d2"
path = "src/d2.rs"

[[bin]]
name = "d3"
path = "src/d3.rs"

[[bin]]
name = "d4"
path = "src/d4.rs"

[[bin]]
name = "d5"
path = "src/d5.rs"

[[bin]]
name = "d6"
path = "src/d6.rs"

[[bin]]
name = "d7"
path = "src/d7.rs"

[[bin]]
name = "d8"
path = "src/d8.rs"

[[bin]]
name = "d9"
path = "src/d9.rs"

[[bin]]
name = "d10"
path = "src/d10.rs"

[[bin]]
name = "d11"
path = "src/d11.rs"

[[bin]]
name = "d12"
path = "src/d12.rs"

[[bin]]
name = "d13"
path = "src/d13.rs"

[[bin]]
name = "d14"
path = "src/d14.rs"

[[bin]]
name = "d15"
path = "src/d15.rs"

[[bin]]
name = "d16"
path = "src/d16.rs"

[[bin]]
name = "d17"
path = "src/d17.rs"

[[bin]]
name = "d18"
path = "src/d18.rs"

[[bin]]
name = "d19"
path = "src/d19.rs"

[[bin]]
name = "play"
path = "src/play_with_nom_errors.rs"

[[bin]]
name = "playground"
path = "src/playground.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.2.1"
itertools = "0.10"
nom = "6"
boolinator = "2.4.0"
thiserror = "1.0"
anyhow = "1.0"
petgraph = "0.5"
bytecount = "0.6.2"
circular-queue = "0.2.6"
derive_more = "0.99.0"
num-integer = "0.1.44"
regex = "1.4.2"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
once_cell = "1.5.2"
typed-arena = "2.0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "d16_bench"
harness = false
